--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,15 @@ documentation = "http://ironframework.io/doc/params/index.html"
 [dependencies]
 bodyparser = "0.8"
 iron = ">=0.5, <0.7"
-num = "0.1"
+mime = "0.3"
+num = "0.3"
 plugin = "0.2"
 serde = { version = "1", optional = true }
 serde_json = "1"
 urlencoded = "0.6"
-tempdir = "0.3"
+tempfile = "3.0"
 
 [dependencies.multipart]
 default-features = false
 features = ["server"]
-version = "0.13"
+version = "0.17"
